<resources>
    <string name="app_name">Brillant</string>
    <string name="greetings">Hello!</string>
    <string name="welcome">Welcome to Brillant!</string>
    <string name="app">This is an app to help you\n not miss the deadlines</string>
    <string name="mood_question">How\'s your mood today?</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="fear">Fear</string>
    <string name="angry">Angry</string>
    <string name="upload_image"><u>Upload Image</u></string>
    <string name="required">Required (max 2MB)</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="dob">Date of Birth</string>
    <string name="goals">Goals</string>
    <string name="dream_job">Dream Job</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="deadline">Deadline</string>
    <string name="profile">Profile</string>
    <string name="tags">Tags</string>
    <string name="task_name">Task Name</string>
    <string name="status">Status</string>
    <string name="due_date">Due Date</string>
    <string name="notification">Notification</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="go">GO</string>
    <string name="pick">Pick a Date</string>
    <string name="have">You have</string>
    <string name="number">tasks</string>
    <string name="far">so far</string>
    <string name="chronometer">You can measure\nhow long it takes and\nrecord what you say\nwhile working on that task</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="play">PLAY</string>
    <string name="audio">Total recording today:</string>
    <string name="count">0</string>
</resources>
