<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    android:layout_marginTop="12dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:id="@+id/card_deadline"
    card_view:cardBackgroundColor="@color/colorWhite"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="10dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/task_name"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="68dp"
                android:fontFamily="@font/lato"
                android:text="@string/task_name"
                android:textAlignment="viewStart"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/tags"
                android:textColor="@color/colorBlack"
                android:gravity="end|center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/status"
                android:layout_width="181dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="16dp"
                android:gravity="top"
                android:textColor="@color/colorBlack"
                android:text="@string/status" />

            <TextView
                android:id="@+id/due_date"
                android:layout_width="150dp"
                android:layout_height="36dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/due_date"
                android:textAlignment="textEnd"
                android:textColor="@color/colorBlack" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>