<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:padding="20dp">

        <ImageView
            android:id="@+id/view_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_user_photo"
            android:contentDescription="@string/upload_image"/>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_image"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/view_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:layout_gravity="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear1"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/text_dob"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/dob"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_dob"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/lato"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear2"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/text_goals"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/goals"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_goals"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/lato"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear3"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/text_dream_job"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/dream_job"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_dream_job"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/lato"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>