<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".EditProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_user_photo" />

            <TextView
                android:id="@+id/upload_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/upload_image"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="37dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="217dp">

            <TextView
                android:id="@+id/text_first_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/first_name"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/lato"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="37dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="267dp">

            <TextView
                android:id="@+id/text_address"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/last_name"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_last_name"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/lato"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="37dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="317dp">

            <TextView
                android:id="@+id/text_email"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/email"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/lato"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="37dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="367dp">

            <TextView
                android:id="@+id/txt_dob"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/dob"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_dob"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/lato"
                android:hint="@string/dob"
                android:inputType="date"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="37dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="417dp">

            <TextView
                android:id="@+id/text_goals"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/goals"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_goals"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/lato"
                android:hint="@string/goals"
                android:inputType="text"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="37dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="467dp">

            <TextView
                android:id="@+id/text_dream_job"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/dream_job"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_dream_job"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/lato"
                android:hint="@string/dream_job"
                android:inputType="text"
                android:textSize="14sp" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>